prevent wrap in contact card between 1131 and 1239

--- a/src/assets/scss/contact-card.scss
+++ b/src/assets/scss/contact-card.scss
@@ -39,8 +39,7 @@
             }
         }
     }
-}
-
-.card {
-    //height: 200px;
+    @media screen and (min-width: 1131px) and (max-width: 1239px) {
+        font-size:87%;
+    }
 }
